# compiler-train-19

./: readme.md
exp1/: Makefile  README.md  run.sh  test.sh
exp1/src/examples/: CountQuads.java  ExprTest.java  PrintQuads.java
exp1/src/flow/: ConstantProp.java  Flow.java  Liveness.java
exp1/src/submit/: Faintness.java  MySolver.java  ReachingDefs.java  TestFaintness.java
exp1/src/test/: Test.cp.out  Test.java  Test.lv.out  Test.rd.out  TestFaintness.out  TestTwo.cp.out  TestTwo.java  TestTwo.lv.out  TestTwo.rd.out
exp2/: Makefile  README.md  run.sh
exp2/src/examples/: PrintQuads.java
exp2/src/flow/: ConstantProp.java  Faintness.java  Flow.java  FlowSolver.java  Liveness.java  ReachingDefs.java
exp2/src/submit/: FindRedundantNullChecks.java  LivenessOpt.java  NullCheckOpt.java  Optimize.java
exp2/src/test/: LivenessTest.java  NullTest.basic.out  NullTest.java  QuickSort.java  SkipList.basic.out  SkipList.java
exp3/: CMakeLists.txt  Project 3.pptx  main.cpp  main.cpp.task1
exp3/cmake/: FindZ3.cmake
exp3/test/: foo.ll
书面/: readme.md
